Fix and re-align cosmetic content misalignment for header tag and its children in style.css.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body>* {
 }
 
 body>*>* {
-    outline: 1px blue solid;
+    /* outline: 1px blue solid; */
 }
 
 body {
@@ -95,13 +95,14 @@ header {
 
         & .alert-btn {
             text-decoration: none;
+            margin-right: 1rem;
         }
 
         & .user_profile {
             display: inherit;
             text-decoration: none;
             margin-right: 1rem;
-
+            gap: 1rem;
             & p {
                 flex: 1;
             }
@@ -113,6 +114,11 @@ header {
         align-items: center;
         background-color: coral;
         height: 100%;
+
+        & span {
+            margin: 0rem 1rem;
+            align-self: center;
+        }
 
         & .usrnm_display {
             margin-right: auto;
@@ -158,7 +164,7 @@ header {
 
 
 header>* * {
-    outline: 1px greenyellow solid;
+    /* outline: 1px greenyellow solid; */
 }
 
 main {
@@ -262,8 +268,8 @@ main {
     flex-direction: column;
     gap: .5rem;
     height: 100%;
-    background-color:rgb(216, 153, 153);
-    
+    background-color: rgb(216, 153, 153);
+
 
 
     & .trending-list {
@@ -272,6 +278,7 @@ main {
         display: grid;
         grid-template-rows: repeat(auto-fll, minmax(1rem, 1fr));
         align-items: center;
+        gap:.5rem;
 
         & li {
             list-style: none;
